@@ -127,6 +127,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #5969: faulthandler module: rename dump_tracebacks_later() to
+  dump_traceback_later() and cancel_dump_tracebacks_later() to
+  cancel_dump_traceback_later().
 
 What's New in Python 3.3.0 Release Candidate 2?
 ===============================================
